@@ -4,6 +4,12 @@
     <artifactId>path_coverage_plus_plus</artifactId>
     <version>1</version>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apiguardian/apiguardian-api -->
+        <dependency>
+            <groupId>org.apiguardian</groupId>
+            <artifactId>apiguardian-api</artifactId>
+            <version>1.1.2</version>
+        </dependency>
         <dependency>
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-symbol-solver-core</artifactId>
@@ -26,6 +32,23 @@
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opentest4j</groupId>
+            <artifactId>opentest4j</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-engine -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
          <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-autoconfigure -->
          <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -81,8 +104,16 @@
                     <systemPropertyVariables>
                         <SANDBOX_HOME>${project.basedir}/resources/sandbox</SANDBOX_HOME>
                     </systemPropertyVariables>
+                    <jvmArguments>
+                        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=localhost:8000 -Djdk.attach.allowAttachSelf=true -Xint
+                    </jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>resources/sandbox/</directory>
+            </resource>
+        </resources>
     </build>
 </project>
